--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Movimento De 30 segundos Capaz De Aumentar A Libido</b></h3>
+            <h3 class="my-4"><b>Movimento De 30 segundos Capaz De Aumentar Libido</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
