--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text"> Só tenho a agradecer,vinha sofrendo com falta de desejo sexual a mais de 5 anos, meu marido estava parando de me dar atenção! Mas depois que eu fiz isso que você falou durante 5 semanas, minha liido simplesmente voltou com tudo, meu casamento está nas nuvens🤩🤩🤩</td>
+                      <td class="fb-comments-comment-text"> Só tenho a agradecer,vinha sofrendo com falta de desejo sexual a mais de 5 anos, meu marido estava parando de me dar atenção! Mas depois que eu fiz isso que você falou durante 5 semanas, minha libido simplesmente voltou com tudo, meu casamento está nas nuvens🤩🤩🤩</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -167,7 +167,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Fiz os alongamentos durante 1 mês, acompanhada de academia e uma boa alimentação, Notei uma diferença INCRÍVEL! Eu já tinha tentado de tudo, consultas caras remédios farmacêuticos,e nada se compara ao que você mostrou nesse vídeo, De verdade só tenho a agradecer!!! </td>
+                      <td class="fb-comments-comment-text">Fiz os movimentos durante 1 mês, acompanhada de academia e uma boa alimentação, Notei uma diferença INCRÍVEL! Eu já tinha tentado de tudo, consultas caras remédios farmacêuticos,e nada se compara ao que você mostrou nesse vídeo, De verdade só tenho a agradecer!!! </td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -317,7 +317,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Eu já estou fazendo tudo certinho, já fazem 3 semanas que estou fazendo os alongamentos toda manhã e toda noite, no começo eu pensei que não funcionaria, mas na segunda semana já noitei uma melhora grande, tanto que já fiz mais sexo com meu marido nessa ultimas 2 semanas do que o ano inteiro, obbrigadaaaa 🥰</td>
+                        <td class="fb-comments-comment-text">Eu já estou fazendo tudo certinho, já fazem 3 semanas que estou fazendo os movimentos toda manhã e toda noite, no começo eu pensei que não funcionaria, mas na segunda semana já noitei uma melhora grande, tanto que já fiz mais sexo com meu marido nessa ultimas 2 semanas do que o ano inteiro, obbrigadaaaa 🥰</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
