--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <h3 class="my-4"><b>Movimento de 30 segundos Capaz de Aumentar Libido</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+            <div id="vid_63cfe222da5f7600088baf3d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63cfe222da5f7600088baf3d" src="https://images.converteai.net/72ad1d90-8943-4170-816e-d3eaaa6e054b/players/63cfe222da5f7600088baf3d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63cfe222da5f7600088baf3d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63cfe222da5f7600088baf3d">var s=document.createElement("script");s.src="https://scripts.converteai.net/72ad1d90-8943-4170-816e-d3eaaa6e054b/players/63cfe222da5f7600088baf3d/player.js",s.async=!0,document.head.appendChild(s);</script>
+          
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://checkout.ticto.com.br/O80F60C2F" class="a-btn" style="text-decoration: none;">
