--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
           <div class="col-lg-8 text-center">
             
 
-            <!-- Headline -->
-            <h3 class="my-4"><b>Movimento de 30 segundos Capaz de Aumentar Libido</b></h3>
-
             <!-- VSL -->
             <div id="vid_63cfe222da5f7600088baf3d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63cfe222da5f7600088baf3d" src="https://images.converteai.net/72ad1d90-8943-4170-816e-d3eaaa6e054b/players/63cfe222da5f7600088baf3d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63cfe222da5f7600088baf3d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63cfe222da5f7600088baf3d">var s=document.createElement("script");s.src="https://scripts.converteai.net/72ad1d90-8943-4170-816e-d3eaaa6e054b/players/63cfe222da5f7600088baf3d/player.js",s.async=!0,document.head.appendChild(s);</script>
-          
+
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://checkout.ticto.com.br/O80F60C2F" class="a-btn" style="text-decoration: none;">
@@ -109,7 +106,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text"> Só tenho a agradecer,vinha sofrendo com falta de desejo sexual a mais de 5 anos, meu marido estava parando de me dar atenção! Mas depois que eu fiz isso que você falou durante 5 semanas, minha libido simplesmente voltou com tudo, meu casamento está nas nuvens🤩🤩🤩</td>
+                      <td class="fb-comments-comment-text"> Só tenho a agradecer,vinha sofrendo com falta de desejo sexual a mais de 5 anos, meu marido estava parando de me dar atenção! Mas depois que eu fiz isso que você falou durante 5 semanas, minha liido simplesmente voltou com tudo, meu casamento está nas nuvens🤩🤩🤩</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -167,7 +164,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Fiz os movimentos durante 1 mês, acompanhada de academia e uma boa alimentação, Notei uma diferença INCRÍVEL! Eu já tinha tentado de tudo, consultas caras remédios farmacêuticos,e nada se compara ao que você mostrou nesse vídeo, De verdade só tenho a agradecer!!! </td>
+                      <td class="fb-comments-comment-text">Fiz os alongamentos durante 1 mês, acompanhada de academia e uma boa alimentação, Notei uma diferença INCRÍVEL! Eu já tinha tentado de tudo, consultas caras remédios farmacêuticos,e nada se compara ao que você mostrou nesse vídeo, De verdade só tenho a agradecer!!! </td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -317,7 +314,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Eu já estou fazendo tudo certinho, já fazem 3 semanas que estou fazendo os movimentos toda manhã e toda noite, no começo eu pensei que não funcionaria, mas na segunda semana já noitei uma melhora grande, tanto que já fiz mais sexo com meu marido nessa ultimas 2 semanas do que o ano inteiro, obbrigadaaaa 🥰</td>
+                        <td class="fb-comments-comment-text">Eu já estou fazendo tudo certinho, já fazem 3 semanas que estou fazendo os alongamentos toda manhã e toda noite, no começo eu pensei que não funcionaria, mas na segunda semana já noitei uma melhora grande, tanto que já fiz mais sexo com meu marido nessa ultimas 2 semanas do que o ano inteiro, obbrigadaaaa 🥰</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
@@ -441,7 +438,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 0); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1405000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
