--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '1349745339158624');
+  fbq('init', '5906827559372336');
   fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
