--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text"> Só tenho a agradecer,vinha sofrendo com falta de desejo sexual a mais de 5 anos, meu marido estava parando de me dar atenção! Mas depois que eu fiz isso que você falou durante 5 semanas, minha liido simplesmente voltou com tudo, meu casamento está nas nuvens🤩🤩🤩</td>
+                      <td class="fb-comments-comment-text"> Só tenho a agradecer,vinha sofrendo com falta de desejo para ir pra cama a mais de 5 anos, meu marido estava parando de me dar atenção! Mas depois que eu fiz isso que você falou durante 5 semanas, minha vontade simplesmente voltou com tudo, meu casamento está nas nuvens🤩🤩🤩</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -151,7 +151,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Esse vídeo mudou minha vida, tenho 45 anos, fazia anos que não tinha desejo durante o sexo, pensei que não tinha mais solução por conta da minha idade, mas depois que eu vi esse vídeo, minha vida simplesmente MUDOU!</td>
+                      <td class="fb-comments-comment-text">Esse vídeo mudou minha vida, tenho 45 anos, fazia anos que não tinha desejo durante na hora H, pensei que não tinha mais solução por conta da minha idade, mas depois que eu vi esse vídeo, minha vida simplesmente MUDOU!</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -180,7 +180,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Fiz os alongamentos durante 1 mês, acompanhada de academia e uma boa alimentação, Notei uma diferença INCRÍVEL! Eu já tinha tentado de tudo, consultas caras remédios farmacêuticos,e nada se compara ao que você mostrou nesse vídeo, De verdade só tenho a agradecer!!! </td>
+                      <td class="fb-comments-comment-text">Fiz os movimentos durante 1 mês, Notei uma diferença INCRÍVEL! Eu já tinha tentado de tudo, consultas caras remédios farmacêuticos,e nada se compara ao que você mostrou nesse vídeo, De verdade só tenho a agradecer!!! </td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -209,7 +209,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Estou muito feliz, a 7 meses atrás eu não tinha nenhuma vontade em fazer sexo com meu marido e agente estava começando a se distanciar, mas quando eu vi isso, parece que foi como mágica em pouco tempo a gente já tinha voltado a fazer loucuras no quarto, coisa que nem quando a gente namorava acontecia, ADOREI 😘😘😘</td>
+                      <td class="fb-comments-comment-text">Estou muito feliz, a 7 meses atrás eu não tinha nenhuma vontade em ir pra cama com meu marido e agente estava começando a se distanciar, mas quando eu vi isso, parece que foi como mágica em pouco tempo a gente já tinha voltado a fazer loucuras no quarto, coisa que nem quando a gente namorava acontecia, ADOREI 😘😘😘</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -238,7 +238,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Realmente funciona, minha libido melhorou drasticamente parece que sou outra pessoa. Obrigada por compartilhar 🥰</td>
+                      <td class="fb-comments-comment-text">Realmente funciona, meu fogo aumentou e  melhorou drasticamente parece que sou outra pessoa. Obrigada por compartilhar 🥰</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -300,7 +300,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Maravilhosa! faz 1 mês que venho fazendo  sexo todo dia com meu marido, e o melhor agora sinto prazer que nunca senti na minha vida! mesmo depois de enfrentar 2 gravides tô conseguindo voltar a ter desejo sexual, tô muito feliz, Obrigada😍😍😍</td>
+                        <td class="fb-comments-comment-text">Maravilhosa! faz 1 mês que venho fazendo todo dia com meu marido, e o melhor agora sinto prazer que nunca senti na minha vida! mesmo depois de enfrentar 2 gravides tô conseguindo voltar a ter desejo na hora H , tô muito feliz, Obrigada😍😍😍</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
@@ -330,7 +330,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Eu já estou fazendo tudo certinho, já fazem 3 semanas que estou fazendo os alongamentos toda manhã e toda noite, no começo eu pensei que não funcionaria, mas na segunda semana já noitei uma melhora grande, tanto que já fiz mais sexo com meu marido nessa ultimas 2 semanas do que o ano inteiro, obbrigadaaaa 🥰</td>
+                        <td class="fb-comments-comment-text">Eu já estou fazendo tudo certinho, já fazem 3 semanas que estou fazendo os movimentos toda manhã e toda noite, no começo eu pensei que não funcionaria, mas na segunda semana já noitei uma melhora grande, tanto que já fiz mais amor com meu marido nessa ultimas 2 semanas do que o ano inteiro, obbrigadaaaa 🥰</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
