--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Amei vou começar a fazer hoje mesmo pois estou sofrendo muito com minha baixa libido,Muito obrigada 😘</td>
+                      <td class="fb-comments-comment-text">Amei vou começar a fazer hoje mesmo pois estou sofrendo muito com minha falta de vontade de ir para cama com meu namorado,Muito obrigada 😘</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
