--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
             
 
             <!-- VSL -->
-            <div id="vid_63cfe222da5f7600088baf3d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63cfe222da5f7600088baf3d" src="https://images.converteai.net/72ad1d90-8943-4170-816e-d3eaaa6e054b/players/63cfe222da5f7600088baf3d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63cfe222da5f7600088baf3d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63cfe222da5f7600088baf3d">var s=document.createElement("script");s.src="https://scripts.converteai.net/72ad1d90-8943-4170-816e-d3eaaa6e054b/players/63cfe222da5f7600088baf3d/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+<div id="vid_64beb498d664890008742339" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64beb498d664890008742339" src="https://images.converteai.net/15cf3d59-6a9f-42f7-8767-66da8a2c22cd/players/64beb498d664890008742339/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64beb498d664890008742339" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64beb498d664890008742339">var s=document.createElement("script");s.src="https://scripts.converteai.net/15cf3d59-6a9f-42f7-8767-66da8a2c22cd/players/64beb498d664890008742339/player.js",s.async=!0,document.head.appendChild(s);</script>
+           
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://checkout.ticto.com.br/O80F60C2F" class="a-btn" style="text-decoration: none;">
+              <a href="https://go.fornpay.com/tbmzg" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -439,7 +439,7 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://checkout.ticto.com.br/O80F60C2F" class="a-btn" style="text-decoration: none;">
+              <a href="https://go.fornpay.com/tbmzg" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
